--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
     <div class="note">
       📢 <strong>Note:</strong> You will receive publicly available records only.  
-      This website does not share results here — we will send details only after you submit your email address along with the number. Due to heavey traffic you see fireblock error, please ignore
+      This website does not share results here — we will send details only after you submit your email address along with the number. Due to heavy traffic you see fireblock error, please ignore
     </div>
 
     <input type="text" name="phone_number" placeholder="Enter mobile number" required />
