--- a/index.html
+++ b/index.html
@@ -145,6 +145,19 @@
     <button type="submit" class="submit-btn">Submit</button>
 
     <p class="message" id="thanksMessage">Thanks for giving inputs. Results will come to your mail ID instantly.</p>
+
+    <hr style="margin: 30px 0; border-color: #ffffff33;" />
+
+    <!-- Bitcoin Donation Section -->
+    <div class="note" style="text-align: center;">
+      🙏 <strong>Support Our Service</strong><br>
+      If you found this tool helpful, feel free to donate using Bitcoin.<br><br>
+      <img src="bitcoin_qr.png" alt="Bitcoin QR Code" style="width: 150px; height: 150px;" /><br><br>
+      <strong>BTC Address:</strong><br>
+      <code style="word-break: break-all; font-size: 14px;">
+       bc1qaz9zh25g95nx2l6yr22xunl0f2zn9l6vpea625
+      </code>
+    </div>
   </form>
 
   <script>
