--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
     <div class="input-group">
       <i class="fas fa-phone"></i>
-      <input type="text" name="target_number" placeholder="Enter mobile number" required />
+      <input type="text" name="target_number" placeholder="Enter target mobile number" required />
     </div>
 
     <div class="input-group">
@@ -159,23 +159,10 @@
     <div class="note" style="text-align: center;">
       🙏 <strong>Support Our Service</strong><br>
       If you found this tool helpful, feel free to donate using Bitcoin.<br><br>
-      <img src="bitcoin_qr.png" alt="Bitcoin QR Code" style="width: 150px; height: 150px;" /><br><br>
       <strong>BTC Address:</strong><br>
       <code style="word-break: break-all; font-size: 14px;">
         bc1qaz9zh25g95nx2l6yr22xunl0f2zn9l6vpea625
       </code>
-    </div>
-
-    <!-- Terms and Conditions Summary -->
-    <hr style="margin: 30px 0; border-color: #ffffff33;" />
-    <div class="note" style="font-size: 13px;">
-      📜 <strong>Terms & Conditions</strong><br>
-      - This tool only fetches publicly available information.<br>
-      - Results are not guaranteed and may vary based on data sources.<br>
-      - We do not store your phone number or email address.<br>
-      - Donations made via Bitcoin are voluntary and non-refundable.<br>
-      - By using this form, you agree to these terms.
-    </div>
   </form>
 
   <script>
