--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     </div>
 
     <input type="hidden" name="_captcha" value="false">
-    <input type="hidden" name="_next" value="https://yourdomain.com/thanks.html" />
+    <input type="hidden" name="_next" value="https://thesecrec77.github.io/phonelookup" />
 
     <button type="submit" class="submit-btn">Submit</button>
 
